pkg/lang/testdata/ub/constraints/invalid/for-each-duplicate-binding.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @a: input.rules }, { @a: input.rules }, ]
    when:    true
    require: true
  },
]
